grafana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: grafana-svc
 namespace: monitoring
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: grafana.ysquaretechnology.com
   http:
     paths:
     - path:
       backend:
         serviceName: grafana-svc
         servicePort: 3000
